--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="colorPrimary">#1565C0</color>
     <color name="colorPrimaryDark">#0D47A1</color>
     <color name="colorAccent">#0D47A1</color>
-    <color name="dateLastMatch">#C0392B</color>
+    <color name="colorDateLastMatch">#C0392B</color>
+    <color name="colorSelectedText">#757575</color>
 </resources>
