--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/layoutDetailMatch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -21,7 +22,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                tools:text="@string/text_empty" />
+                tools:text="@string/text_empty"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -42,14 +43,14 @@
                         android:id="@+id/imgLogoHome"
                         android:layout_width="90dp"
                         android:layout_height="90dp"
-                        tools:src="@drawable/ic_no_image" />
+                        tools:src="@drawable/ic_no_image"/>
 
                     <TextView
                         android:id="@+id/txtNameHome"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
-                        tools:text="@string/text_empty" />
+                        tools:text="@string/text_empty"/>
 
                     <TextView
                         android:id="@+id/txtHomeScorer"
@@ -57,7 +58,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:textSize="12sp"
-                        tools:text="@string/text_empty" />
+                        tools:text="@string/text_empty"/>
 
                 </LinearLayout>
 
@@ -91,7 +92,7 @@
                         android:layout_height="wrap_content"
                         android:text="VS"
                         android:textSize="18sp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"/>
 
                 </LinearLayout>
 
@@ -108,7 +109,7 @@
                         android:layout_height="wrap_content"
                         android:textSize="32sp"
                         android:textStyle="bold"
-                        tools:text="@string/text_empty" />
+                        tools:text="@string/text_empty"/>
 
                 </LinearLayout>
 
@@ -125,14 +126,14 @@
                         android:id="@+id/imgLogoAway"
                         android:layout_width="90dp"
                         android:layout_height="90dp"
-                        tools:src="@drawable/ic_no_image" />
+                        tools:src="@drawable/ic_no_image"/>
 
                     <TextView
                         android:id="@+id/txtNameAway"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
-                        tools:text="@string/text_empty" />
+                        tools:text="@string/text_empty"/>
 
                     <TextView
                         android:id="@+id/txtAwayScorer"
@@ -140,7 +141,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:textSize="12sp"
-                        tools:text="@string/text_empty" />
+                        tools:text="@string/text_empty"/>
 
                 </LinearLayout>
 
@@ -154,14 +155,14 @@
             android:layout_gravity="center"
             android:layout_marginTop="4dp"
             android:text="@string/text_lineups"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="4dp"
             android:layout_marginBottom="4dp"
-            android:background="@color/colorPrimaryDark" />
+            android:background="@color/colorPrimaryDark"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -173,7 +174,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
-                tools:text="@string/text_empty" />
+                tools:text="@string/text_empty"/>
 
             <TextView
                 android:layout_width="0dp"
@@ -182,7 +183,7 @@
                 android:gravity="center"
                 android:text="@string/text_goal_keeper"
                 android:textSize="12sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/txtGkAway"
@@ -190,7 +191,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:textAlignment="textEnd"
-                tools:text="@string/text_empty" />
+                tools:text="@string/text_empty"/>
         </LinearLayout>
 
         <LinearLayout
@@ -204,7 +205,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
-                tools:text="@string/text_empty" />
+                tools:text="@string/text_empty"/>
 
             <TextView
                 android:layout_width="0dp"
@@ -213,7 +214,7 @@
                 android:gravity="center"
                 android:text="@string/text_defense"
                 android:textSize="12sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/txtDefAway"
@@ -221,7 +222,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:textAlignment="textEnd"
-                tools:text="@string/text_empty" />
+                tools:text="@string/text_empty"/>
         </LinearLayout>
 
         <LinearLayout
@@ -276,7 +277,7 @@
                 android:gravity="center"
                 android:text="@string/text_forward"
                 android:textSize="12sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/txtForwardAway"
@@ -292,7 +293,7 @@
             android:layout_height="1dp"
             android:layout_marginTop="4dp"
             android:layout_marginBottom="4dp"
-            android:background="@color/colorPrimaryDark" />
+            android:background="@color/colorPrimaryDark"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -300,14 +301,14 @@
             android:layout_gravity="center"
             android:layout_marginTop="4dp"
             android:text="@string/text_subtitutes"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="4dp"
             android:layout_marginBottom="4dp"
-            android:background="@color/colorPrimary" />
+            android:background="@color/colorPrimary"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -319,7 +320,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
-                tools:text="@string/text_empty" />
+                tools:text="@string/text_empty"/>
 
             <TextView
                 android:id="@+id/txtSubtituteAway"
@@ -327,7 +328,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:textAlignment="textEnd"
-                tools:text="@string/text_empty" />
+                tools:text="@string/text_empty"/>
         </LinearLayout>
 
     </LinearLayout>
