--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="colorPrimaryDark">#0D47A1</color>
     <color name="colorAccent">#0D47A1</color>
     <color name="colorDateLastMatch">#C0392B</color>
+    <color name="colorDateNextMatch">#27AE60</color>
     <color name="colorSelectedText">#757575</color>
 </resources>
